--- a/main.css
+++ b/main.css
@@ -84,9 +84,12 @@ header{
 }
 
 @media(max-width:800px){
+    .about-me{
+        margin:0 10px;
+    }
     .hamburger{
         display: block;
-        margin:30px 20px;
+        margin:10px 20px;
     }
     .hamburger.active .bar:nth-child(2){
         opacity: 0;
